# fable-collector

./: .gitignore  CHECK-LOCAL.bat  LICENSE  README.md  SETUP-LOCAL.bat  activity_profiles.yaml  collect.py  env_validation.py  fable-windows-aggregation.patch  fishing_profiles.yaml  healthcheck.yml  main.py  probe_gfs.py  pyproject.toml  ras-fartass.json  reader.py  requirements.txt  rules.yaml  rules.yml  shared.py  sites.yaml  validate_config.py
docs/: ARCHITECTURE.md  AUDIT-2026-07.md  CHANGELOG.md  DEPLOY.md  FAMILY-BOARD.md  FAMILY-CALIBRATION-V1.md  FAMILY-GO-PRUDENT.md  FIELD-VALIDATION.md  FISH-INTELLIGENCE.md  KNOWLEDGE-PACK.md  MIGRATION-NOTE.md  PORT-KNOWLEDGE.md  PRODUCTION-RECOVERY-2026-07-17.md  RAS-FARTASS.md  RECOMMENDATIONS.md  REFRESH-RELIABILITY.md  RUNBOOK.md  VISUAL-RECIPE.md
fable/: __init__.py  astro.py  collect.py  config.py  dashboard_modules.py  dashboard_patch.py  healthcheck.py  knowledge.py  offshore.py  offshore_recommendations.py  openmeteo.py  port_knowledge.py  preflight.py  publish.py  recommendations.py  status.py  util.py  window_detect.py  window_models.py  window_policy.py  windows.py
knowledge/: manifest.yaml
public/: _debug-forecast-gammarth-port.json  _debug-marine-gammarth-port.json  activity-board.js  arabic-locale.js  el-haouaria.json  family-content-gate.js  family-reasons.js  family-view.js  field-log.html  field-log.js  field-validation-link.js  freshness-gate.js  gammarth-port.json  index.html  index.json  locale-transition.js  manifest.webmanifest  mobile-ergonomics.js  port-knowledge.js  production-recovery.json  (+6 more)
(+99 files in other folders)
