[project]
name = "fable-collector"
version = "3.1.0"
description = "Collecteur météo marine, fenêtres Family GO et recommandations d’activités pour ports tunisiens"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "astral>=3.2,<4",
    "tzdata>=2024.1",
]

[tool.ruff]
line-length = 118
target-version = "py310"
exclude = ["tools", "public"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "SIM105",
    "E702",
    "E701",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
